# BYOR

./: .clang-format  .gitignore  Dockerfile  Optimization for messages.md  README.md  build.sh  client.cpp  server.cpp
01_basic_server_client/: myclient.cpp  myserver.cpp
02_protocol_parsing/: client.cpp  myclient.cpp  myserver.cpp  server.cpp
03_event_loop/: CMakeLists.txt  myserver.cpp
03_event_loop/archive/: myclient.cpp
03_event_loop/include/: epollwrapper.h  server.h
03_event_loop/src/: client.cpp  epoll_wrapper.cpp  server.cpp
04_key_value_server/: CMakeLists.txt  tempclient.cpp
04_key_value_server/include/: epollwrapper.h  server.h  server.tpp  socketwrapper.h
04_key_value_server/scripts/: load_test_server.py
04_key_value_server/src/: cli_client.cpp  client.cpp  epoll_wrapper.cpp  main.cpp  server.cpp  socketwrapper.cpp
04_key_value_server/tests/: CMakeLists.txt  epollwrapper_test.cpp
05_key_value_server_optimized/: CMakeLists.txt  tempclient.cpp
05_key_value_server_optimized/benchmarks/: CMakeLists.txt  benchmarks.md  latency.cpp  plot_latencies.py  profiling.md  req_per_sec.cpp  server_benchmark.cpp  throughput.cpp
05_key_value_server_optimized/include/: client.h  epollwrapper.h  server.h  server.tpp  socketwrapper.h
05_key_value_server_optimized/src/: client.cpp  main.cpp
05_key_value_server_optimized/tests/: CMakeLists.txt  server_test.cpp
epoll_practice/: epoll_example.c
